--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,7 +77,7 @@ a:hover {
     grid-template-columns: repeat(4, 1fr);
 }
 
-#navbar2 button {
+#navbar2 input {
     background-color: #2569fc49;
     border: none;
     text-align: center;
@@ -85,6 +85,16 @@ a:hover {
     font-weight: 400;
     font-size: 12pt;
     color: #2569fc;
+}
+
+#navbar2 input:hover {
+    background-color: rgb(149, 168, 36);
+    font-weight: bold;
+}
+
+#navbar2 input.active {
+    background-color: white;
+    font-weight: bold;
 }
 
 #sidebar {
@@ -202,24 +212,46 @@ a:hover {
 #scores-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .match-card {
-    width: 150px;
-    margin: 0.5em;
+    background-color: #c4c3c90e;
+    width: 250px;
+    margin: 0;
     padding: 0.7em;
     border: 1px solid #2569fc;
-    border-radius: 8px;
+    border-radius: 4px;
+}
+
+.match-card:hover {
+    background-color: #7170746c;
 }
 
 .match-card>* {
     font-size: 0.8em;
     margin: 0;
+    text-align: center;
 }
 
-.match-card>h3+p {
-    margin: 0.4em 0 0;
+.match-card>p:first-of-type {
+    margin: 0.8em 0 0;
+}
+
+.match-card>div {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.team-icon {
+    width: 48px;
+    height: 36px;
+}
+
+.team-score {
+    font-size: 2.5em;
+    font-weight: 600;
 }
 
 #footer {
@@ -359,29 +391,17 @@ a:hover {
         margin-left: 40px;
     }
 
-    #navbar2 button:hover {
-        background-color: rgb(149, 168, 36);
-    }
-
-    #nav2-btn1 {
+    #soccer {
         border-bottom-left-radius: 10px;
     }
 
-    #nav2-btn4 {
+    #basketball {
         border-bottom-right-radius: 10px;
     }
 
     #banner img {
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
-    }
-
-    .match-card {
-        width: 200px;
-        margin: 0.6em;
-        padding: 0.7em;
-        border: 1px solid #2569fc;
-        border-radius: 8px;
     }
 }
 
@@ -449,15 +469,11 @@ a:hover {
         object-fit: cover;
     }
 
-    #navbar2 button:hover {
-        background-color: rgb(149, 168, 36);
-    }
-
-    #nav2-btn1 {
+    #soccer {
         border-bottom-left-radius: 10px;
     }
 
-    #nav2-btn4 {
+    #basketball {
         border-bottom-right-radius: 10px;
     }
 }
